ambiguity impl, simplification repo, testdata refined